syntax = "proto3";
option java_package = "com.roje.game.message.nn";
option java_multiple_files = true;

message NiuNiuCardRoomConfig{
    int32 mode = 1;
    int32 baseScore = 2;
    int32 round = 3;
    int32 payMode = 4;
    int32 startMode = 5;
    int32 maxTui = 6;
    int32 maxQiang = 7;
    int32 doublingMode = 8;
    bool szn = 9;
    bool whn = 10;
    bool thn = 11;
    bool hln = 12;
    bool zdn = 13;
    bool wxn = 14;
    bool ths = 15;
    bool fb_enterHalfWay = 16;
    bool fb_rub = 17;
    bool ma = 18;
    bool bet_doubling = 19;
    bool bet_limit = 20;
    bool joker = 21;
}
